# django-pro-template

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
docker/: entrypoint.sh
docker/django_init.d/: 10-apply-migrations.sh  20-create-superuser.sh
myproject/: __main__.py  asgi.py  settings.py  urls.py  wsgi.py
myproject/apps/core/: apps.py
myproject/apps/core/management/commands/: ensureadmin.py  pingdb.py
myproject/apps/mybusinesslogic/: api_urls.py  apps.py  urls.py
myproject/apps/openapi/: apps.py  urls.py  views.py
myproject/apps/openapi/templates/: elements.html  rapidoc.html
myproject/utils/: db.py  django.py  linter.py
